# quizzbot

./: CMakeLists.txt  TODO
scripts/: Pipfile  generate.py  generate.sh  messages.yaml  msg_template.cpp
scripts/templates/: include_template.cpp  include_template.cpp~  include_template.h  include_template.h~  msg_template.cpp
src/client/: CMakeLists.txt  line_parser.cc  line_parser.h  main.cc  tcp_client.cc  tcp_client.h  ui.cc  ui.h
src/common/: command.cc  command.h  event_queue.h  log.h  message.cc  message.h  parse_helpers.h  player.cc  player.h  protocol.cc  protocol.h  quizzbot_types.h  string_utils.h
src/common/messages/: AnswerMessage.h  ErrorMessage.h  JoinAckMessage.h  JoinMessage.h  JoinNackMessage.h  MessageMessage.h
src/server/: game.cc  game.h  handler.cc  handler.h  main.cpp  network.cc  network.h  quizz_system.cc  quizz_system.h  tcp_connection.h
tests/: CMakeLists.txt  command_test.cc  event_queue_test.cc  line_parser_test.cc  parse_helpers_test.cc  parser_test.cc  string_utils_test.cc
